# rust-server

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml  index.html  rust-http-serverless.yml
src/: main.rs
