[package]
name = "rust-server"
version = "2.0.0"
description = "HTTP rust server"
edition = "2021"
keywords = ["rust", "server", "http"]
exclude = [
  ".github",
  "Dockerfile"
]

[dependencies]
structopt = "0.3.25"
hyper = { version = "0.14.25", features = ["full"] }
tokio = { version = "1.26.0", features = ["full"] }
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4.2"